# homelab

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README-oidc.md  README.md  Start-HomeLab.ps1  build.rs  haproxy-debug-sidecar.yaml  haproxy.yaml  homelab.yaml  prometheus.yaml  query  start  strings_extract.py  super-chart-0.1.0.tgz  super-chart.yaml
.github/workflows/: build-msi-services.yml  build-tauri.yml  build.yml
charts/: Chart.yaml  values.yaml
charts copy/: Chart.yaml  values.yaml
charts/charts/: kubernetes-ingress-1.40.1.tgz  vcluster-0.0.1.tgz
docker/: Dockerfile  k3s-env  k3s-init.sh
docker-image/: Dockerfile  fstab  k3s-env  k3s-init.sh  mount_all.sh  wsl.conf
home-dns/: Cargo.toml  build.rs
home-dns/proto/: home_dns.proto
home-dns/src/: main.rs
home-http/: Cargo.toml  build.rs
home-http/proto/: home_http.proto
home-http/src/: main.rs
home-http/tests/: grpc_connection.rs
home-lab/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
home-lab/frontend/: .gitignore  package-lock.json  package.json
home-lab/scripts/: prepare-services.mjs  write-version.mjs
home-lab/src/: console-bridge.js  history.html  main.js  style.css  tauri.js  ui-refresh.js
home-lab/src-tauri/: Cargo.toml  README-fix2.txt  README.txt  build.rs  tauri.conf.json
home-lab/src-tauri/icons/: desktop.ini
home-lab/src-tauri/proto/: home_dns.proto  home_http.proto  home_proxy.proto  home_s3.proto
home-lab/src-tauri/resources/: app.manifest  install-services.nsh  install-services.wxi  install-services.wxs  main-with-services.wxs  version.txt
home-lab/src-tauri/resources/conf/: dns.yaml  http.yaml  oidc-config.json
home-lab/src-tauri/resources/scripts/: configure-oidc.ps1  ensure-wsl.ps1
home-lab/src-tauri/resources/wsl/: .gitignore  README.md  k3s-init.sh  setup-wsl.ps1
home-lab/src-tauri/src/: commands.rs  dev_services.rs  dns.rs  grpc.rs  http.rs  icons.rs  lib.rs  lib.rs_  main.rs  menu.rs  oidc.rs  proxy.rs  s3.rs  types.rs  ui.rs  wsl.rs
home-lab/src-tauri/tests/: wsl_integration.rs
home-lab/src/components/: dns-records.js  dns-status.js  http-routes.js  http-status.js  k8s-client.js  oidc-clients.js  oidc-status.js  s3-buckets.js  s3-status.js  toast.js  wsl-instance.js
home-oidc/: Cargo.toml  build.rs
home-oidc/proto/: home_oidc.proto
home-oidc/src/: main.rs
home-oidc/tests/: windows_service.rs
home-pki/: Cargo.toml
home-pki/src/: lib.rs
home-proxy/: Cargo.toml  build.rs
home-proxy-grpc-client/: Cargo.toml  README.md  build.rs
home-proxy-grpc-client/examples/: cli.rs
home-proxy-grpc-client/src/: lib.rs
home-proxy/src/: main.rs
home-s3/: Cargo.toml  build.rs
home-s3/src/: main.rs
install/nsis/: oidc.nsh
local-rpc/: Cargo.toml
local-rpc/src/: lib.rs
oidc-service/: Cargo.toml
oidc-service/src/: main.rs
openspec/: config.yaml
openspec/changes/archive/2026-06-02-k3s-multinode-netns/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-k3s-multinode-netns/specs/cluster-node-networking/: spec.md
openspec/changes/archive/2026-06-02-k3s-multinode-netns/specs/wsl-clusters/: spec.md
openspec/changes/archive/2026-06-02-node-lan-vlan-hcs-hcn/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-node-lan-vlan-hcs-hcn/specs/node-lan-exposure/: spec.md
openspec/specs/: dns.md  http-proxy.md  oidc.md  pki.md  s3.md  tray-app.md  wsl-clusters.md
pipe-test/: Cargo.toml  build.rs
pipe-test/src/: main.rs
scripts/: after-reboot-setup.ps1  generate-codesign-cert.ps1  install-elevated.ps1  tauri-msi-relink.ps1
service-tester/: Cargo.toml
service-tester/src/: main.rs
services/oidc-service/: Cargo.toml
services/oidc-service/src/: main.rs  oidc.rs
src/: alpine.rs  apply-ingress-job.yaml  cli.rs  cuda.rs  gitlab.rs  helm.rs  ingress-configmap.yaml  k3s.rs  main.rs  minio.rs  oci.rs  prometheus.rs  tools.rs  update.rs  vcluster copy.rs_  vcluster copy.rs__  vcluster.rs  vcluster.rs.copy  wsl.rs
temp/: configmap.yaml  deploy.yaml  deploy_nginx copy.yaml  deploy_nginx.yaml  haproxy-values.yaml  haproxy.cfg  haproxy2.cfg  nginx.yaml
test/: values.yaml
tools/setup-oidc/: Cargo.toml
tools/setup-oidc/src/: main.rs
values/: kube-prometheus-stack.yaml
