[workspace]
members = [
  "home-dns",
  "home-http",
  "home-oidc",
  "home-lab/src-tauri",
  "pipe-test",
  "service-tester"
]
resolver = "3"

[workspace.package]
license = "GPL-3.0-only"
repository = "https://github.com/example/homelab"

[workspace.dependencies]
sysinfo = "0.38.0"
tokio = "1.47.1"
tokio-tungstenite = "0.28.0"
windows-service = "0.8.0"

[profile.release]
lto = "thin"
codegen-units = 1
