[package]
name = "home-http"
version = "0.1.0"
edition = "2024"

[build-dependencies]
protoc-bin-vendored = "3"
prost-build = "0.12"
tonic-build = "0.11"
chrono = "0.4"

[dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Memory"] }
anyhow = "1"
bytes = "1"
futures-util = "0.3"
http = "1"
hyper = { version = "1.7", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "http1", "http2", "client-legacy"] }
http-body-util = "0.1"          # ← AJOUT
log = "0.4"
flexi_logger = "0.31"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
chrono = "0.4"
tokio = { workspace = true, features = ["full"] }
windows-service = { workspace = true }
sysinfo = "0.37"


 

