[package]
name = "home-oidc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Homelab Maintainers <maintainers@example.com>"]
description = "Minimal OIDC provider Windows service"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
flexi_logger = "0.31"
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.4", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
jsonwebtoken = "9"
log = "0.4"
once_cell = "1.19"
rand = "0.8"
rcgen = { version = "0.13", features = ["pem"] }
rsa = { version = "0.9", features = ["pem"] }
rustls = "0.21"
rustls-pemfile = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["macros"] }
serde_urlencoded = "0.7"
sha2 = "0.10"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tokio-rustls = "0.24"
tokio-util = { version = "0.7", features = ["full"] }
url = "2.5"
windows-service = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
