[package]
name = "home-proxy-grpc-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "gRPC client for Home Proxy over Windows named pipe \\.\pipe\home-proxy"

[lib]
name = "home_proxy_client"
path = "src/lib.rs"

[build-dependencies]
protoc-bin-vendored = "3.0"
tonic-build = "0.12"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tower = "0.5"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["full"] }
