[package]
name = "home-proxy"
version = "0.1.0"
edition = "2021"

[build-dependencies]
protoc-bin-vendored = "3.0"
tonic-build = "0.12"

[dependencies]
anyhow = "1"
bytes = "1"
futures-util = "0.3"
http = "1"
hyper = { version = "1.6", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "http1", "http2", "client-legacy"] }
http-body-util = "0.1"          # ← AJOUT
log = "0.4"
flexi_logger = "0.28"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
windows-service = "0.8"
sysinfo = "0.37"


[profile.release]
lto = "thin"
codegen-units = 1
