[package]
name = "home-s3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
flexi_logger = "0.31"
log = "0.4"
pin-project = "1.1.5"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.15"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
walkdir = "2.5"
windows-service = { workspace = true }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[build-dependencies]
chrono = "0.4"
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
