[package]
name = "pipe-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
protoc-bin-vendored = "3"

