[package]
name = "pipe-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
windows-sys = { version = "0.61", features = ["Win32_System_Rpc"] }
prost = "0.12"
local-rpc = { path = "../local-rpc" }

[build-dependencies]
tonic-build = "0.14"
prost-build = "0.12"
protoc-bin-vendored = "3"

