[package]
name = "service-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
local-rpc = { path = "../local-rpc" }
prost = "0.12"
windows-service = { workspace = true }
windows-sys = { version = "0.61.0", features = ["Win32_System_Rpc"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
protoc-bin-vendored = "3"
