[package]
name = "homelab-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 app with gRPC client over Windows named pipe"
license = "MIT"
authors = ["Sebastien"]

[lib]
name = "homelab_tauri"
path = "src/lib.rs"

[[bin]]
name = "homelab-tauri"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# IMPORTANT: include 'codegen' so generated code compiles
tonic = { version = "0.11", features = ["transport", "codegen"] }
prost = "0.12"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tower = { version = "0.5", features = ["util"] }
tauri-plugin-log = "2"
log = "0.4"
dirs = "6"

# Rasterisation SVG
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
png = "0.17"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
protoc-bin-vendored = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
] }
